# yolo-ultralytics

./: .editorconfig  .gitignore  .ipynb  .justfile  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  example.env  pyproject.toml  ruff.toml  shell.nix  tox.ini  yolo.ipynb
shared/utils/: pyproject.toml
shared/utils/src/utils/: __init__.py
src/core/: pyproject.toml
src/core/src/core/: dataloader.py  eval.py  model.py  train.py  yolo_training.py
