[project]
name = "modern-python"
version = "0.0.1"
description = "A template for developing production-ready Python applications."
authors = [
  { name = "Miguel Villa Floran", email = "miguel.villafloran@gmail.com" },
]
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }

dependencies = [
  "utils",
  "core",
  "typer>=0.12.5",
  "pre-commit>=4.1.0",
  "ipykernel>=6.29.5",
  "deptry>=0.23.0",
  "mypy>=1.15.0",
  "pytest-cov>=6.0.0",
]

[tool.uv.sources]
utils = { workspace = true }
core = { workspace = true }

[tool.uv.workspace]
members = ["shared/*", "src/*"]

[tool.uv]
package = false

[tool.black]
line-length = 88
exclude = '''
^/(
  (
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.venv
    | _build
    | build
    | dist
    | .notebooks
    | .nox
  )
)
'''

[tool.isort]
profile = "black"
extend_skip = [".tmp", ".venv"]

[tool.mypy]
exclude = "^.tmp/"
ignore_missing_imports = true

[tool.bandit]
skips = ['B101']

[tool.ruff]
lint.ignore = ["E501"]
extend-exclude = ["__pycache__", "docs", "site", ".tmp"]

[tool.pytest.ini_options]
cache_dir = "/home/vscode/workspace/.cache/pytest"
pythonpath = [".", "scripts", "src"]
