[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modern_python"
version = "0.0.1"
description = "A template for developing production-ready Python applications."
authors = [
  { name = "Miguel Villa Floran", email = "miguel.villafloran@gmail.com" },
]
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = { file = "LICENSE" }

dependencies = [
  "dotenv>=0.9.9",
  "roboflow>=1.2.11",
  "typer>=0.12.5",
  "ultralytics>=8.3.235",
]

[tool.uv.workspace]
members = []

[tool.uv]
package = false

[dependency-groups]
dev = ["pre-commit>=4.1.0", "ipykernel>=6.29.5"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = []

[tool.pytest.ini_options]
cache_dir = ".pytest_cache"
pythonpath = ["."]
