[project]
name = "utils"
version = "0.0.0"
description = "Utility functions"
authors = [
  { name = "Miguel Villa Floran", email = "miguel.villafloran@gmail.com" },
]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "dotenv>=0.9.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
